<resources>
    <string name="app_name">DogMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter">filter</string>
    <string name="action_settings">Settings</string>
    <string name="DogMate">DogMate</string>
    <string name="Next">הבא</string>
    <string name="City">עיר</string>
    <string name="Advertiser">מפרסם</string>
    <string name="dog">כלב</string>
    <string name="Entry">שלום משתמש יקר</string>
    <string name="adopter">מאמץ</string>
    <string name="Password">סיסמא</string>
    <string name="NewUser">משתמש חדש</string>
    <string name="reg">לחץ על הרשמה</string>
    <string name="registration">הרשמה</string>
    <string name="Confirm">אישור</string>
    <string name="Exsitadopter">משתמש רשום</string>
    <string name="Email">E-mail</string>
    <string name="fullName">שם מלא</string>
    <string name="passwordApprove">אישור סיסמא</string>
    <string name="phoneNumber">טלפון</string>
    <string name="ifadvertiser">מפרסם</string>
    <string name="ifadopter">מאמץ</string>
    <string name="Reg">הרשמה</string>
    <string name="addItem">הוספת כלב</string>
    <string name="dogBreed">גזע </string>
    <string name="age">גיל </string>
    <string name="description">תיאור</string>
    <string name="alerganic">האם היפואלרגני?</string>
    <string name="LogOutC">התנתקות</string>
    <string name="myOrders">הבקשות שלי</string>
    <string name="myDogs">הכלבים שלי</string>
    <string name="settings">הגדרות</string>
    <string name="newOrder">אימוץ חדש</string>
    <string name="favorites">המועדפים שלי</string>
    <string name="numOfOrder">מספר אימוץ</string>
    <string name="C_email">מייל המאמץ</string>
    <string name="C_city">עיר</string>
    <string name="date">תאריך</string>
    <string name="dog_name">גזע הכלב</string>
    <string name="dog_id">מזהה הכלב</string>
    <string name="pay">תשלום משלוח</string>
    <string name="cityName">עיר</string>
    <string name="houseNumber">מספר בית</string>
    <string name="appartmentNumber">מספר דירה</string>
    <string name="floor">קומה</string>
    <string name="streetName">רחוב</string>
    <string name="Adopt">אמץ!</string>
    <string name="command">הערות</string>
    <string name="work2">עובד</string>
    <string name="OrderDetails">בקשה לאימוץ</string>
    <string name="orderDetails">בקשה לאימוץ</string>
    <string name="Date">תאריך</string>
    <string name="isWorking">האם אתה עובד?</string>
    <string name="work">עובד</string>
    <string name="not_working">לא עובד</string>
    <string name="typeOfHouse">סוג בית</string>
    <string name="apartment">דירה</string>
    <string name="privateHouse">בית פרטי</string>
    <string name="comment">הערות</string>
    <string name="adopt">אמץ</string>
    <string name="numOfOrderC">מספר אימוץ</string>
    <string name="advertiser_email">מייל המפרסם</string>
    <string name="city_C">עיר</string>
    <string name="date_C">תאריך</string>
    <string name="dog_name_C">גזע הכלב</string>
    <string name="dog_id_C">מזהה הכלב</string>
    <string name="pay_C">תשלום משלוח</string>
    <string name="myOrdersadopter">הבקשות שלי</string>
    <string name="NumOfOrder">מספר אימוץ</string>
    <string name="dateOrder">תאריך</string>
    <string name="dogID">מזהה הכלב</string>
    <string name="og">גזע הכלב</string>
    <string name="advertiserID">מזהה המפרסם</string>
    <string name="advertiserEmail">מייל המפרסם</string>
    <string name="advertiserAppartment">דירה</string>
    <string name="advertiserFloor">קומה</string>
    <string name="advertiserNumHouse">מספר בית</string>
    <string name="advertiserStreet">רחוב</string>
    <string name="advertiserCity">עיר</string>
    <string name="adopterID">מזהה המאמץ</string>
    <string name="adopterEmail">מייל המאמץ</string>
    <string name="adopterAppartment">דירה</string>
    <string name="adopterFloor">קומה</string>
    <string name="adopterNumHouse">מספר בית</string>
    <string name="adopterStreet">רחוב</string>
    <string name="adopterCity">עיר</string>
    <string name="Comment">הערות</string>
    <string name="PayOrder">תשלום משלוח</string>
    <string name="recievedOrder">קבלת טופס האימוץ</string>
    <string name="advertiserName">שם המפרסם</string>
    <string name="adopterName">שם המאמץ</string>
    <string name="advertiserPhone">טלפון המפרסם</string>
    <string name="adopterPhone">טלפון המאמץ</string>
    <string name="myOrdersadvertiser">הבקשות שלי</string>
    <string name="addPicture">אישור והוספת תמונות</string>
    <string name="chooseFile">בחר קובץ</string>
    <string name="Upload">העלאה</string>
    <string name="doneUploading">סיימתי</string>
    <string name="edit">עריכה</string>
    <string name="pictures">תמונות</string>
    <string name="deletedog">מחיקת כלב</string>
    <string name="deletePhoto">לחץ על תמונה למחיקתה</string>
    <string name="todo">TODO</string>
    <string name="addPictures">הוספת תמונות</string>
    <string name="adoption">אמץ</string>
    <string name="noRes">לא נמצאו תוצאות</string>
    <string name="searchbyAdvertiser">חפש מפרסם לפי עיר/שם/רחוב</string>
    <string name="Searchbydog">חפש כלב</string>
    <string name="advertiserDETS">פרטי המפרסם</string>
    <string name="dogDETS">גזע הכלב</string>
    <string name="dogPictures">תמונות</string>
    <string name="newORDER">אימוץ חדש</string>
    <string name="myLastOrders">בקשות אחרונות לאימוץ</string>
    <string name="searchadvertiser">חפש מפרסם</string>
    <string name="serachdog">חפש כלב</string>
    <string name="addTofavorites">הוספת כלב למועדפים</string>
    <string name="advertiserdits">מפרסם:</string>
    <string name="move_to_menu">עבור לתפריט</string>
    <string name="delete_from_favorites">מחק מהמועדפים</string>
    <string name="puppy">גור</string>
    <string name="adult">בוגר</string>
    <string name="old">מבוגר</string>
    <string name="dog_age">גיל הכלב</string>
    <string name="dog_gender">מין</string>
    <string name="male">זכר</string>
    <string name="female">נקבה</string>
    <string name="size">גודל</string>
    <string name="small">קטן</string>
    <string name="gender">מין</string>
    <string name="region">איזור בארץ</string>
    <string name="center">מרכז</string>
    <string name="north">צפון</string>
    <string name="south">דרום</string>
    <string name="jerusalem">ירושלים</string>
    <string name="medium">בינוני</string>
    <string name="big">גדול</string>
    <string name="accept">accept</string>
    <string name="dogName">שם הכלב:</string>
    <string name="needsEducated">מחונך לצרכים</string>
    <string name="hypoallergenic">היפואלרגני</string>
    <string name="kidsFriendly">ידידותי לילדים</string>
    <string name="catsFriendly">ידידותי לחתולים</string>
    <string name="dogsFriendly">ידידותי לכלבים</string>
    <string name="suitsToApartment">מתאים לדירה</string>
    <string name="search">חיפוש</string>
    <string name="dogs_s_pic">dogs\'s pic</string>
    <string name="sendRequest">שלח בקשה</string>
    <string name="addDog">הוסף כלב</string>
    <string name="sendAdoptionRequest">שלח בקשת אימוץ</string>


</resources>
