<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/dateOrder"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/dogName"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adopterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/adopterName"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cusEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/adopterEmail"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adopterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/adopterPhone"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="31dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">



            <TextView
                android:id="@+id/adopterCity"
                android:layout_width="401dp"
                android:layout_height="33dp"
                android:background="#FFFF"
                android:text="@string/adopterCity"
                android:textColor="#0C0C0C" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/Comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/Comment"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

</LinearLayout>