<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/dateOrder"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/dogName"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/advertiserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/advertiserName"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/advertiserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/advertiserEmail"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/advertiserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        android:text="@string/advertiserPhone"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/TableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/advertiserCity"
                android:layout_width="400dp"
                android:layout_height="37dp"
                android:layout_column="1"
                android:background="#FFFF"
                android:text="@string/advertiserCity"
                android:textColor="#0C0C0C" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/Comment"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="#FFFF"
        android:text="@string/Comment"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="18sp" />


</LinearLayout>