<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".adopterSideActivities.SearchMainMenu">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/newORDER"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SearchAdvertiser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:text="@string/searchadvertiser"
        android:onClick="SearchAdvertiser"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SearchDog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="SearchDog"
        android:background="#FFFFFF"
        android:text="@string/serachdog"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myLastOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myLastOrders"
        android:textColor="#000"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/my_last_orders_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>